test/seq/cmdlists/invalid_wait2.err
SyntaxError: Missing time unit
Line: 3, Column: 8
wait(10)
       ^
